# automata_diags

./: .gitignore  Automata_Diags_Backend_Playground.ipynb  CHANGELOG.md  HANDS_ON_TUTORIAL_FEATURE.md  PROJECT_ARCHITECTURE.md  README.md  TUTORIAL_FEATURE_GUIDE.md  nfa_to_dfa_example.py  pyproject.toml  requirements.txt  test_nfa.json
.github/workflows/: ci.yml  deploy.yml  docs.yml  python-publish.yml
automata/: __init__.py
automata/backend/drawings/: automata_drawer.py  tm_drawer.py
automata/backend/grammar/: automaton_base.py  dist.py
automata/backend/grammar/context_free/: __init__.py  cfg_algo.py  cfg_mod.py
automata/backend/grammar/context_free/pda/: __init__.py  pda_mod.py
automata/backend/grammar/context_free/tests/: cfg_tests.py  test_cfg.py
automata/backend/grammar/regular_languages/: regex_to_nfa.py
automata/backend/grammar/regular_languages/dfa/: dfa_mod.py  dfa_mod_algo.py  dfa_ops.py  dfa_to_regex.py
automata/backend/grammar/regular_languages/nfa/: nfa_mod.py  nfa_to_dfa.py
automata/backend/grammar/transducers/: scfg_parser.py
automata/backend/grammar/transducers/tests/: test_scfg_parser.py
automata/backend/grammar/turing/: __init__.py
automata/backend/grammar/turing/tests/: test_tm.py
automata/backend/grammar/turing_machines/: __init__.py  base.py  exceptions.py  library.py  multihead.py  multitape.py  nondeterministic.py  result.py  standard.py  tape.py  tm_mod.py
automata/backend/tests/: test_properties.py
automata/backend/tests/drawings/: test_tm_drawer.py
automata/backend/tests/turing_machines/: test_library.py  test_ntm.py  test_tm_execution.py  test_turing_machines.py
automata/frontend/: package-lock.json  package.json
automata/frontend/public/: index.html
automata/frontend/src/: App.js
automata/frontend/src/components/: AppWalkthrough.css  AppWalkthrough.jsx  DFAGraph.jsx  DFASimulator.css  DFASimulator.jsx  Layout.css  Layout.jsx
automata/frontend/src/lib/: compilerTutorialLexers.js
backend/grammar/regular_languages/dfa/: dfa_mod.py
backend/grammar/regular_languages/tests/: test_dfa.py
docs/: conf.py  index.md
docs/api_reference/: automata_api.md
docs/user_guide/: complete_tutorial.md
examples/: cfg_to_cnf_custom_example.py  cfg_to_cnf_example.py  turing_machine_example.py
frontend/: package-lock.json  package.json
(+113 files in other folders)
